tests/error/switch_case_non_const.vbc
// 预期：应对非常量 case 标签报「case 标签必须是编译期整型常量」错误

int main() {
    int x = 1;
    switch (x) {
        case x:
            break;
    }
    return 0;
}

main();
